--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 
     <meta property="og:title" content="Ceynon - Stylish Office-Ready Clothing">
     <meta property="og:description" content="Elevate your professional style with Ceynon's stylish office attire, including t-shirts, trousers, and shirts.">
-    <meta property="og:image" content="https://raw.githubusercontent.com/csanjeewag/ceynon/master/assets/images/ceynon.png">
+    <meta property="og:image" content="https://ceynon.com/assets/images/ceynon.png">
     <meta property="og:url" content="https://www.ceynon.com/">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Ceynon - Stylish Office-Ready Clothing">
     <meta name="twitter:description" content="Elevate your professional style with Ceynon's stylish office attire, including t-shirts, trousers, and shirts.">
-    <meta name="twitter:image" content="https://raw.githubusercontent.com/csanjeewag/ceynon/master/assets/images/ceynon.png">
+    <meta name="twitter:image" content="https://ceynon.com/assets/images/ceynon.png">
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
